# sphinxcontrib-itemlist

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
demo/: conf.py  demo-defaults.rst  demo-empty.rst  demo-main.rst  index.rst  page1.rst  page2.rst
sphinx_reqlist/: __init__.py
sphinxcontrib/itemlist/: __init__.py
sphinxcontrib/items/: __init__.py
