[metadata]

name = sphinxcontrib-itemlist
version = 1.0.0
platform =  any
author = Example Author
description = Sphinx extension to generate a list or table from a sequence of items
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vhiribarren/sphinxcontrib-itemlist
license = MIT
project_urls =
    Bug Tracker = https://github.com/vhiribarren/sphinxcontrib-itemlist/issues
    Source = https://github.com/vhiribarren/sphinxcontrib-itemlist
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Sphinx
    Framework :: Sphinx :: Extension
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation
    Topic :: Text Processing
    Topic :: Utilities

[options]

packages = sphinxcontrib.itemlist
install_requires =
    sphinx